cmake_minimum_required(VERSION 3.14)
project(leetcode)

set(CMAKE_CXX_STANDARD 14)

add_executable(leetcode main.cpp 167TowSumII.h 653TwoSumIV.h 170TwoSumIII.h 11ContainerWithMostWater.h 739DailyTemperatures.h 621TaskScheduler.h 617MergeTwoBinaryTrees.h 42TrappingRainWater.h 226InvertBinaryTree.h 112PathSum.h 437PathSumIII.h)

