cmake_minimum_required(VERSION 3.14)
project(leetcode)

set(CMAKE_CXX_STANDARD 14)

add_executable(leetcode main.cpp 167TowSumII.h 653TwoSumIV.h 170TwoSumIII.h 11ContainerWithMostWater.h 739DailyTemperatures.h 621TaskScheduler.h 617MergeTwoBinaryTrees.h 42TrappingRainWater.h 226InvertBinaryTree.h 112PathSum.h 437PathSumIII.h 666PathSumIV.h 938RangeSumOfBST.h 507PerfectNumber.h 173BinarySearchTreeIterator.h 94BinaryTreeInorderTraversal.h 654MaximumBinaryTree.h 108ConvertSortedArraytoBinarySearchTree.h 100SameTree.h 872LeafSimilarTrees.h Common.h 110BalancedBinaryTree.h 104MaximumDepthOfBinaryTree.h 111MinimumDepthOfBinaryTree.h 102BinaryTreeLevelOrderTraversal.h 103BinaryTreeZigzagLevelOrderTraversal.h 109ConvertSortedListToBinarySearchTree.h 235LowestCommonAncestorOfABinarySearchTree.h 105ConstructBinaryTreeFromPreorderAndInorderTraversal.h 106ConstructBinaryTreeFromInorderAndPostorderTraversal.h 199BinaryTreeRightSideView.h 116PopulatingNextRightPointersInEachNode.h 117PopulatingNextRightPointersInEachNodeII.h)

